Fix wrapper flickering on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -248,7 +248,6 @@ input:focus {
 /* Tasks */
 .task {
     display: flex;
-    position: relative;
     align-items: center;
     padding: 5px;
     margin: 20px 0px;
@@ -263,6 +262,7 @@ input:focus {
     flex: 1;
     cursor: pointer;
 }
+
 .task-text::after {
     content: "";
     position: absolute;
@@ -270,6 +270,7 @@ input:focus {
     left: 0;
     height: 1px;
 }
+
 
 .task-input {
     opacity: 0;
